@@ -1,5 +1,15 @@
 local addonName, addon = ...
 
+addon.SpecialMaps = {
+    [201] = { 373 },
+    [203] = { 373 },
+    [204] = { 373 },
+    [205] = { 373 },
+    [319] = { 117, 118, 119, 120 },
+    [320] = { 117, 118, 119, 120 },
+    [321] = { 117, 118, 119, 120 },
+}
+
 addon.MountTypes = {
     [230] = "Ground",
     [231] = "Aquatic",
